samples/_failures_safe/1760886466_97349a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a6df4a5.c: In function ‘main’:
./samples/SAFE/__tmp_8a6df4a5.c:146:5: error: expected expression at end of input
  146 |     if (start_node < 0 ||
      |     ^~
./samples/SAFE/__tmp_8a6df4a5.c:146:5: error: expected declaration or statement at end of input
